issue 66 bug was fixed now you can have Strign feature that contains ':' in it