@@ -58,6 +58,19 @@
     </dependencies>
     <profiles>
         <profile>
+            <!--
+            This profile is needed when the project is imported into IntelliJ IDEA. After the import the
+            IDE will signal all used Java features that are newer than Java 8. Most notably it will not allow
+            'var' for variable declaration. This is because the project is using Jabel to generate Java 8 compatible
+            byte-code while using Java9+ features.
+
+            After loading the project select this profile on the maven window under profiles (there should not be any
+            other profile) and all of a sudden the errors will disappear.
+
+            This profile does not use the Jabel annotation processor, and the same time it declares that the language
+            level is Java 11 with preview features enabled. The defined property 'idea.maven.embedder.version' is
+            suposed to switch on this profile automatically.
+            -->
             <id>intellij-idea-only</id>
             <activation>
                 <property>
@@ -67,14 +80,33 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.8.1</version>
                         <configuration>
-                            <release>11</release>
+                            <release>13</release>
                             <compilerArgs>
                                 <arg>--enable-preview</arg>
                             </compilerArgs>
                         </configuration>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <configuration>
+                            <argLine>--enable-preview</argLine>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.junit.platform</groupId>
+                                <artifactId>junit-platform-surefire-provider</artifactId>
+                                <version>1.3.2</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.junit.jupiter</groupId>
+                                <artifactId>junit-jupiter-engine</artifactId>
+                                <version>5.6.0</version>
+                            </dependency>
+                        </dependencies>
                     </plugin>
                 </plugins>
             </build>
@@ -94,14 +126,13 @@
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
                         <artifactId>junit-jupiter-engine</artifactId>
-                        <version>5.3.2</version>
+                        <version>5.6.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -114,7 +145,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>3.1.1</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -141,8 +172,6 @@
                     <annotationProcessors>
                         <annotationProcessor>com.github.bsideup.jabel.JabelJavacProcessor</annotationProcessor>
                     </annotationProcessors>
-                    <source>11</source>
-                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
